[package]
name = "wallet-service"
version = "0.0.1"
authors = ["huhn511 <huhn.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2" }
actix-service = "1.0.0"

iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop", features = ["ledger-nano", "ledger-nano-simulator"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.39"


[dev-dependencies]
actix-rt = "1"